k8s/playlists-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: playlists-api
  namespace: tracing
  labels:
    app: playlists-api
spec:
  selector:
    matchLabels:
      app: playlists-api
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: playlists-api
    spec:
      containers:
        - name: playlists-api
          image: mdsahiloss/jaeger-tracing:playlists-api-1.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 10010
          resources:
            limits:
              cpu: "250m"
              memory: "128Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: playlists-api
  namespace: tracing
  labels:
    app: playlists-api
spec:
  type: ClusterIP
  selector:
    app: playlists-api
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 10010
---
# apiVersion: networking.k8s.io/v1beta1
# kind: Ingress
# metadata:
#   annotations:
#     kubernetes.io/ingress.class: "nginx"
#     nginx.ingress.kubernetes.io/ssl-redirect: "false"
#     nginx.ingress.kubernetes.io/rewrite-target: /$2
#   name: playlists-api
# spec:
#   rules:
#     - host: servicemesh.demo
#       http:
#         paths:
#           - path: /api/playlists(/|$)(.*)
#             backend:
#               serviceName: playlists-api
#               servicePort: 80
