k8s/videos-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: videos-api
  namespace: tracing
  labels:
    app: videos-api
spec:
  selector:
    matchLabels:
      app: videos-api
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: videos-api
    spec:
      containers:
        - name: videos-api
          image: mdsahiloss/jaeger-tracing:videos-api-1.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 10010
          resources:
            limits:
              cpu: "250m"
              memory: "128Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: videos-api
  namespace: tracing
  labels:
    app: videos-api
spec:
  type: ClusterIP
  selector:
    app: videos-api
  ports:
    - protocol: TCP
      name: http
      port: 10010
      targetPort: 10010
---
