k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: videos-web
  namespace: tracing
spec:
  rules:
    - host: tracing.demo
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: videos-web
                port:
                  number: 80
